<resources>
    <string name="app_name">UETrack™ - Biowaste</string>
    <string name="regex_phone">^\\(?\\d{3}[\\)?|-]\\d{3}[- ]\\d{4}((\\s=?)(ext\\.|x)\\d{1,4})?$</string>

    <string name="sample_number">35</string>
    <string name="sample_date">Feb 19</string>
    <string name="sample_date_2">19/02/2019</string>
    <string name="sample_month">二月</string>
    <string name="sample_kg">10 公斤</string>
    <string name="sample_name">Asarai</string>
    <string name="sample_name_dollar">200 $</string>

    <string name="by_month">By 月份</string>
    <string name="by_date">By 日期</string>

    <string name="unit_kg">公斤</string>
    <string name="unit_dollar">$</string>
    <string name="month">月份</string>
    <string name="date">日期</string>
    <string name="done_by">完成者</string>
    <string name="no_of_haulage">拖運數量</string>
    <string name="total_weight">總重量（KG）</string>
    <string name="hualage_charge">運費 $</string>
    <string name="disposal_fee">處置費$</string>
    <string name="total_disposal_fee">總處置費</string>
    <string name="submit">送出</string>

    <string name="updated">更新成功</string>

    <string name="dashboard">儀表板</string>
    <string name="biowaste_disposal">生物廢棄物處置</string>
    <string name="monthly_patients_forms">床位</string>
    <string name="logout">登出</string>
    <string name="select">選擇</string>
    <string name="total_bin">總箱</string>
    <string name="total_cost">總費用 $</string>

    <string name="carbon_box">紙箱（公斤）</string>
    <string name="paper">紙（公斤）</string>
    <string name="cans">罐/金屬（公斤）</string>
    <string name="plastic">塑膠（公斤）</string>


    <string name="food_and_general_waste">食物 &amp; 一般廢棄物</string>
    <string name="biowaste">生物廢棄物</string>
    <string name="recycled_items">回收物品</string>
    <string name="monthly_payments">床位</string>

    <string name="food_and_general_waste_details">食物和一般廢棄物的詳細資訊</string>
    <string name="biowaste_details">生物廢物詳細資訊</string>
    <string name="recycled_items_details">回收物品詳情</string>
    <string name="monthly_payments_details">床位</string>

    <string name="food_and_general_waste_create">建立食物和一般廢棄物</string>
    <string name="biowaste_create">建立生物廢棄物</string>
    <string name="recycled_items_create">建立回收物品</string>
    <string name="monthly_payments_create">床位</string>

    <string name="general_waste">一般廢棄物</string>
    <string name="biowaste_disposal_cost">生物廢棄物處理成本</string>
    <string name="recycle_item_disposal">回收物品處置</string>
    <string name="total_patients">床位</string>

    <string name="back_button_delay_message">再按一次退出 </string>

    <string name="hello_blank_fragment">你好空白片段</string>
    <string name="delete">刪除</string>
    <string name="edit">編輯</string>
    <string name="confDoc">Conf. Doc. (公斤)</string>
    <string name="nonconfDoc">Non-Conf. Doc (公斤)</string>
    <string name="glass">玻璃 (公斤)</string>
    <string name="newspaper">報紙 (公斤)</string>
    <string name="others">其他 (公斤)</string>
    <string name="cytotoxic_waste_bin">細胞毒性廢物箱</string>
    <string name="radio_active_waste_bin">放射性廢物箱</string>
    <string name="chemical_waste_bin">化學廢物箱</string>
    <string name="other_biowaste_bins">其他生物垃圾箱</string>
    <string name="number">數</string>
    <string name="total">總</string>
    <string name="cost_bin">成本/箱</string>
    <string name="biohazard_waste_bins">生物危害廢物箱</string>
    <string name="zero">0</string>
    <string name="zero_decimal" >0.00</string>

    <!--    20200106-->
    <string name="please_check_network_connection">please check network connection</string>
    <string name="please_try_later">please try later</string>
    <string name="successfully_saved_item">Successfully saved item</string>
    <string name="failed_to_save_item">Failed to save item</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="no_records_found">No records found</string>
    <string name="please_enter_total_weight">Please enter total weight</string>
    <string name="please_enter_disposal_fee">Please enter Disposal Fee $</string>
    <string name="please_enter_hualage_charge">Please enter Haulage Charge $</string>
    <string name="please_enter_no_of_haulage">Please enter No of Haulage</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="product_url_not_found">Product URL not found</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="please_enter_total_patients">Please enter total patients</string>
    <string name="please_enter_plastic_weight">Please enter plastic weight</string>
    <string name="please_enter_cans_weight">Please enter cans weight</string>
    <string name="please_enter_paper_weight">Please enter paper weight</string>
    <string name="please_enter_carton_box_weight">Please enter carton box weight</string>
    <string name="please_enter_conf_doc_weight">Please enter Conf. Doc. weight</string>
    <string name="please_enter_non_conf_doc_weight">Please enter Non-Conf. Doc weight</string>
    <string name="please_enter_glass_weight">Please enter glass weight</string>
    <string name="please_enter_newspapers_weight">Please enter newspapers weight</string>
    <string name="please_enter_others">Please enter others</string>
    <string name="please_tap_back_twice_to_exit">Please tap back twice to exit</string>
    <string name="please_enter_cyclone_toxic_cost">Please enter cyclone toxic cost</string>
    <string name="please_enter_cyclone_toxic_number">Please enter cyclone toxic number</string>
    <string name="please_enter_radio_active_waste_number">Please enter radio active waste number</string>
    <string name="please_enter_chemical_number">Please enter chemical number</string>
    <string name="please_enter_other_biowaste_number">Please enter other biowaste number</string>
    <string name="please_enter_total_bin">Please enter total bin</string>
    <string name="please_enter_total_cost">Please enter total cost</string>
    <string name="please_enter_a_valid_username">Please enter a valid username</string>
    <string name="please_enter_a_valid_password">Please enter a valid password</string>
    <string name="monthly_patient_details">Monthly patient details</string>
    <string name="monthly_patients">Monthly Patients</string>
    <string name="recycled_items_disposed">Recycled Items Disposed</string>
    <string name="a_uems_product">A UEMS Product</string>
    <string name="eLinen">eLinen</string>
    <string name="today">today</string>
    <string name="beds_occupied">Beds Occupied</string>
    <string name="login">LOGIN</string>

</resources>
